adduser (3.101.0) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 23 Dec 2006 13:52:55 +0100

adduser (3.101) unstable; urgency=low

  [ Marc Haber ]
  * Update French (fr) program and man page translation.
    Thanks to Nicolas François. Closes: #402247
    The man page translation is from off-BTS
  * Update Russian (ru) man page translation.
    Thanks to Yuri Kozlov. Closes: #403785
  * Update Italian (it) program and man page translation.
    Thanks to Luca Monducci. Closes: #404262

  [ Stephen Gran ]
  * Update documentation about system uid's < 100 (closes: #402288)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 23 Dec 2006 12:50:15 +0100

adduser (3.100) unstable; urgency=low

  [ Marc Haber ]
  * Update Italian (it) program translation.
    Thanks to Luca Monducci. Closes: #396948
  * Update French (fr) program translation.
    Thanks to Nicolas François. Closes: #396737
  * Update German (de) program translation.
    Thanks to Tobias Toedter. Closes: #397131
  * Update Basque (eu) program translation.
    Thanks to Piarres Beobide. (mh) Closes: #399552
  * Updated Catalan (ca) program translation.
    Thanks to Jordi Mallach and Robert Millan. (mh) Closes: #379476

  [ Stephen Gran ]
  * Tentative fix for Undefined subroutine &main::NOEXPR called at
    /usr/sbin/adduser line 509.
    Thanks to Thorsten Gunkel. Closes: #212872

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 26 Nov 2006 22:12:28 +0100

adduser (3.99) unstable; urgency=low

  * escape @ in new regexp, now really fixing #389160.
    Thanks to Stephen for spotting this in time.
  * Fix wrong option spec backup-to= in deluser.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 13 Oct 2006 11:06:35 +0000

adduser (3.98) unstable; urgency=low

  * Update Polish (pl) program and manpage translation.
    Thanks to Robert Luberda. (mh) Closes: #383724
  * Update Brazilian Portuguese (pt_BR) manpage translation. Thanks to