@@ -1,8 +1,9 @@
 adduser (3.101.0) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Add testsuite test9.pl to catch the bug from #407231
 
- -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 23 Dec 2006 13:52:55 +0100
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Wed, 17 Jan 2007 12:38:33 +0100
 
 adduser (3.101) unstable; urgency=low
 
